--- a/package.json
+++ b/package.json
@@ -1,9 +1,31 @@
 {
+  "type": "module",
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "music-metadata": "^10.0.1",
     "nodemon": "^3.1.0",
-    "uuid": "^10.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "uuid": "^10.0.0",
+    "webamp": "^0.0.0-next-bd2022a8"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^22.1.0",
+    "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
+    "prisma": "^5.17.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.17.0",
+    "typescript": "^5.5.4"
+  },
+  "scripts": {
+    "start": "node dist/server.js",
+    "dev-frontend": "nodemon src/public/index.tsx"
   }
 }
