--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "music-metadata": "^10.0.1",
@@ -29,4 +30,3 @@
     "dev-frontend": "nodemon src/public/index.tsx"
   }
 }
-
