--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ffmpeg": "^0.0.4",
     "multer": "^1.4.5-lts.1",
     "music-metadata": "^10.0.1",
     "nodemon": "^3.1.0",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/ffmpeg": "^1.0.7",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.1.0",
     "@types/react-dom": "^18.3.0",
@@ -30,3 +32,4 @@
     "dev-frontend": "nodemon src/public/index.tsx"
   }
 }
+
